--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "serve": "serve -s build",
     "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
